--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-family: '\'Montserrat\', sans-serif';
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,5 +25,66 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)) no-repeat;
+  overflow-x: hidden;
 }
+header{
+  z-index: 1;
+}
+
+.bg-video > video{
+  object-fit: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  z-index: -1;
+}
+.controls{
+  position: absolute;
+  bottom: 2em;
+  right: 2em;
+  width: auto;
+  outline: 0;
+} 
+.controls > span .video-actions{
+  /* font-size: 4em; */
+  display: inline-block;
+  cursor: pointer;
+  color: rgba(255,255,255,.2);
+}
+.controls > span .video-actions:hover{
+  transition: color ease-in .3s;
+  color: rgba(255,255,255,.8);
+}
+
+header figure > img{
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: .6s;
+  transform-style: preserve-3d;
+  position: relative;
+  z-index: 3;
+}
+
+header figure > img:hover{ display: block;
+  transform: rotateY(180deg);
+}
+
+header hgroup{
+  z-index: 4;
+}
+header hgroup h1{
+    color: #fff;
+    text-shadow: 1px 0 2px rgba(0,0,0,.4);
+}
+header hgroup h2{
+    color:  rgb(150, 243, 135); 
+    text-shadow: 0px 0 1px rgba(255,255,255,.5); 
+}
+/* flex-direction: row;
+    align-content: space-around;
+    justify-content: flex-start;
+    align-items: center; */
