--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 255,255,255;
+  --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 42, 41, 41;
   --background-end-rgb: 0, 0, 0;
 }
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 255,255,255;
-    --background-end-rgb: 255,255,255;
+    --background-start-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;
   }
 }
 
@@ -20,19 +20,17 @@ body {
   font-family: '\'Montserrat\', sans-serif';
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)) no-repeat;
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)) no-repeat;
   overflow-x: hidden;
 }
-header{
+
+header {
   z-index: 1;
 }
 
-.bg-video > video{
+.bg-video>video {
   object-fit: cover;
   position: fixed;
   top: 0;
@@ -41,25 +39,28 @@ header{
   min-height: 100vh;
   z-index: -1;
 }
-.controls{
+
+.controls {
   position: absolute;
   bottom: 2em;
   right: 2em;
   width: auto;
   outline: 0;
-} 
-.controls > span .video-actions{
+}
+
+.controls>span .video-actions {
   /* font-size: 4em; */
   display: inline-block;
   cursor: pointer;
-  color: rgba(255,255,255,.2);
-}
-.controls > span .video-actions:hover{
-  transition: color ease-in .3s;
-  color: rgba(255,255,255,.8);
+  color: rgba(255, 255, 255, .2);
 }
 
-header figure > img{
+.controls>span .video-actions:hover {
+  transition: color ease-in .3s;
+  color: rgba(255, 255, 255, .8);
+}
+
+header figure> a > img {
   width: 100%;
   height: 100%;
   cursor: pointer;
@@ -69,22 +70,44 @@ header figure > img{
   z-index: 3;
 }
 
-header figure > img:hover{ display: block;
+header figure> a > img:hover {
+  display: block;
   transform: rotateY(180deg);
 }
 
-header hgroup{
+header hgroup {
   z-index: 4;
 }
-header hgroup h1{
-    color: #fff;
-    text-shadow: 1px 0 2px rgba(0,0,0,.4);
+
+header hgroup h1 {
+  font-size: 3em;
+  font-weight: bold;
+  width: 100%;
+  margin: -1rem auto 0 1rem;
+  padding: 0;
+  text-align: left;
+  color: #fff;
+  text-shadow: 1px 0 2px rgba(0, 0, 0, .4);
 }
-header hgroup h2{
-    color:  rgb(150, 243, 135); 
-    text-shadow: 0px 0 1px rgba(255,255,255,.5); 
+
+header hgroup h2 {
+  font-size: 1.4em;
+  letter-spacing: 1px;
+  font-weight: bold;
+  width: auto;
+  margin: -1rem 0 0 1rem;
+  padding: 0;
+  text-align: left; 
+  color:  rgb(109, 236, 89); 
+  text-shadow: 0px 0 1px rgba(0,0,0,.6);
 }
-/* flex-direction: row;
-    align-content: space-around;
-    justify-content: flex-start;
-    align-items: center; */
+.maintenance-mode{
+  position: absolute;
+  bottom: 2em;
+  width: auto;
+  padding: 0px;
+  margin: 0px; 
+  color: #000;
+  text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
+  font-size: 2em;
+}
