build and font config uypdates

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 42, 41, 41;
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: var(--montserrat);
+  font-family: 'Montserrat', sans-serif;
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
