--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,11 +18,9 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: rgb(var(--foreground-rgb));
-  background-color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)) no-repeat;
+  color: #fff;
+  background-color: #000 ;
+  background: #000;
   overflow-x: hidden;
 }
 
