--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,7 @@ header hgroup {
 }
 
 header hgroup h1 {
-  font-size: 3em;
+  font-size: 2.5rem;
   font-weight: bold;
   width: 100%;
   margin: -1rem auto 0 1rem;
@@ -88,11 +88,11 @@ header hgroup h1 {
   text-shadow: 1px 0 2px rgba(0, 0, 0, .4);
 }
 header hgroup h2 {
-  font-size: 1.45em;
+  font-size: 1.2rem;
   letter-spacing: 1px;
   font-weight: bold;
   width: auto;
-  margin: -1rem 0 0 .8em;
+  margin: -1rem 0 0 1.1rem;
   padding: 0;
   text-align: left; 
   color:  rgb(109, 236, 89); 
@@ -117,19 +117,98 @@ header .icons > div > span{
   font-size: 2em;
 }
 
-@media all and (max-width: 768px) {
+h3{
+  margin: 0 auto;
+  font-size:x-large;
+  padding: 1rem;
+  border-bottom: 1px solid #fff;
+}
+
+article{
+  margin: 2rem auto;
+  padding: 0 6rem;
+  text-align: left;
+  font-family: sans-serif;
+}
+
+article > h4{
+  font-family: sans-serif;
+  font-size: larger;
+  margin: 1rem 0;
+  font-weight: 600;
+}
+
+article > h4:first-child{
+  margin-top: 0;
+}
+
+article > h5{
+  font-family: sans-serif;
+  font-size: medium;
+  margin: .5rem 0;
+  font-weight: 400;
+}
+article > p{
+  font-size: smaller;
+  font-family: sans-serif;
+}
+
+article > ul{
+  display: block;
+  list-style-type: circle;
+  margin-left: 2rem;
+}
+article > ul > li{
+  font-size: smaller;
+  font-family: sans-serif;
+}
+
+article a,
+article a:active,
+article a:visited
+{
+  color: #2e7dde;;
+  text-decoration: underline;
+}
+
+article a:hover{
+  color: #5e9eed;
+
+}
+
+@media all and (max-width: 1280px) {
   header hgroup h1 {
-    font-size: 1.8em;
+    font-size: 1.9rem; 
+    margin-bottom: .5rem;
+  }
+
+  header hgroup h2 {
+    font-size: .87rem; 
+  }
+}
+@media all and (max-width: 800px) {
+  header hgroup h1 {
+    font-size: 1.5rem; 
+    margin: 0 0 0 1rem;
   }
   header hgroup h2{
-    font-size: 1.2em;
+    font-size: .7rem; 
     margin: 0 0 0 1rem;
   }
   .controls{
     right: 1em;
   }
 }
-@media all and (max-width: 480px) {
+@media all and (max-width: 540px) {
+
+  header hgroup h1 {
+    font-size: medium; 
+    margin: 0 0 0 1rem;
+  }
+  header hgroup h2{
+    font-size: small;
+    margin: 0 0 0 1rem;
+  }
 
   .maintenance-mode{
     font-size: 1.2em;
